# opdg

./: .gitignore  README.md  configuration.py  pyproject.toml  requirements.txt  yadiskapi.py
bot/logic/register/: select.py
bot/structures/: lexicon.py
control_panel/: app.py  config.json  flask_yandex.py  functions.py  register.py  study_groups.json  webapp.html
control_panel/db/: connect.py  tables.py
control_panel/elements/: cards.py  errors_targets.py  global_vars.py  ruz_parsing.py  screens.py  sqls.py  tabs.py  text.py
src/bot/: run.py
src/bot/filters/: __init__.py  filters.py  is_not_exists.py
src/bot/handlers/: __init__.py  check_results.py  check_status.py  rate_video.py  reg_team.py  start.py  upload_video.py  user_agreement.py  video_uploader.py
src/bot/middlewares/: __init__.py  side_user.py
src/bot/structures/: lexicon.py  role.py
src/bot/structures/keyboards/: __init__.py  agreement_button.py  main_menu.py  reg_button.py  steps_boards.py  to_menu_button.py
src/database/: models.py  requests.py
src/utils/: __init__.py  utils.py  yadiskapi.py
