[tool.poetry]
name = "opdg"
version = "0.1.0"
description = ""
authors = ["Ivan Simonenko <simonenkoivansimon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
mysql-connector-python = "^8.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
